--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
-    <title>Project</title>
+    <title>Space Invaders?</title>
 </head>
 <body>
-    <canvas id="mainCanvas"></canvas>
     <script src="js/classes.js"></script>
     <script src="js/Presets/bigFunc.js"></script>
     <script src="js/Presets/prepare4Game.js"></script>
